After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705358 - Fix distcheck when the quvi helper is uninstalled
Fix distcheck when the quvi helper is uninstalled
Status: RESOLVED FIXED
Product: totem-pl-parser
Classification: Core
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: totem-pl-parser-maint
totem-pl-parser-maint
Depends on:
Blocks:
 
 
Reported: 2013-08-02 14:38 UTC by Bastien Nocera
Modified: 2015-02-17 17:51 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Bastien Nocera 2013-08-02 14:38:45 UTC
The quvi bits will completely fail if the helper isn't installed already, which means that a clean install will fail its tests.
Comment 1 Bastien Nocera 2015-02-17 17:51:00 UTC
commit e0a27de154259c8e11dd8eff1b606c9e6d162502
Author: Bastien Nocera <hadess@hadess.net>
Date:   Tue Feb 17 15:25:09 2015 +0100

    tests: Fix distcheck tests
    
    The videosite helper wasn't installed yet, so all calls to it failed,
    making our special case in the RSS parsing fail.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705358