tests: Fix distcheck tests

The videosite helper wasn't installed yet, so all calls to it failed,
making our special case in the RSS parsing fail.

https://bugzilla.gnome.org/show_bug.cgi?id=705358